--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for XML::Hash::XS.
 
+0.03    2012-02-25
+        changed output to a file handle (thank to Cono)
+
 0.02    2012-02-15
         increased performance by 2.5 times via direct conversion to a string without creating a DOM
 
