--- a/Changes
+++ b/Changes
@@ -1,10 +1,13 @@
 Revision history for XML::Hash::XS.
 
+0.03_01 2012-02-28
+        Added META.json
+
 0.03    2012-02-25
-        changed output to a file handle (thank to Cono)
+        Changed output to a file handle (thanks to Cono)
 
 0.02    2012-02-15
-        increased performance by 2.5 times via direct conversion to a string without creating a DOM
+        Increased performance by 2.5 times via direct conversion to a string without creating a DOM
 
 0.01    2012-02-12
         First version
