Import of YOREEK/XML-Hash-XS-0.04 from CPAN.
gitpan-cpan-distribution: XML-Hash-XS
gitpan-cpan-version:      0.04
gitpan-cpan-path:         YOREEK/XML-Hash-XS-0.04.tar.gz
gitpan-cpan-author:       YOREEK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for XML::Hash::XS.
 
+0.04    2012-03-24
+        Updated Makefile.PL
+
 0.03_01 2012-02-28
         Added META.json
 
