Import of YOREEK/XML-Hash-XS-0.05 from CPAN.
gitpan-cpan-distribution: XML-Hash-XS
gitpan-cpan-version:      0.05
gitpan-cpan-path:         YOREEK/XML-Hash-XS-0.05.tar.gz
gitpan-cpan-author:       YOREEK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for XML::Hash::XS.
 
+0.05    2012-03-25
+        Fix bug with compiling on FreeBSD
+
 0.04    2012-03-24
         Updated Makefile.PL
 
