--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for XML::Hash::XS.
 
+0.05_01 2012-03-26
+        Fix test conv.t
+
 0.05    2012-03-25
         Fix bug with compiling on FreeBSD
 
