Import of YOREEK/XML-Hash-XS-0.05_02 from CPAN.
gitpan-cpan-distribution: XML-Hash-XS
gitpan-cpan-version:      0.05_02
gitpan-cpan-path:         YOREEK/XML-Hash-XS-0.05_02.tar.gz
gitpan-cpan-author:       YOREEK
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for XML::Hash::XS.
 
+0.05_02 2012-04-03
+        Added ppport.h.
+        No more using Scalar::Util.
+
 0.05_01 2012-03-26
         Fix test conv.t
 
