Import of YOREEK/XML-Hash-XS-0.05_03 from CPAN.
gitpan-cpan-distribution: XML-Hash-XS
gitpan-cpan-version:      0.05_03
gitpan-cpan-path:         YOREEK/XML-Hash-XS-0.05_03.tar.gz
gitpan-cpan-author:       YOREEK
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for XML::Hash::XS.
 
-0.05_02 2012-04-03
+0.05_03 2012-04-02
+        Fix bug with ppport.h.
+
+0.05_02 2012-04-02
         Added ppport.h.
         No more using Scalar::Util.
 
