--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for XML::Hash::XS.
 
+0.06    2012-04-06
+        New options "canonical" and "use_attr".
+
 0.05_03 2012-04-02
         Fix bug with ppport.h.
 
