Import of YOREEK/XML-Hash-XS-0.07 from CPAN.
gitpan-cpan-distribution: XML-Hash-XS
gitpan-cpan-version:      0.07
gitpan-cpan-path:         YOREEK/XML-Hash-XS-0.07.tar.gz
gitpan-cpan-author:       YOREEK
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -23,7 +23,8 @@ FUNCTIONS
                 node4 => sub { return 'value4' },
                 node5 => sub { return { node51 => 'value51' } },
             },
-            indent => 1
+            canonical => 1,
+            indent    => 2,
         ;
 
     will convert to:
@@ -31,17 +32,39 @@ FUNCTIONS
         <?xml version="1.0" encoding="utf-8"?>
         <root>
           <node1>value1</node1>
+          <node2>value21</node2>
           <node2>
-            <item>value21</item>
-            <item>
-              <node22>value22</node22>
-            </item>
+            <node22>value22</node22>
           </node2>
           <node3>value3</node3>
           <node4>value4</node4>
           <node5>
             <node51>value51</node51>
           </node5>
+        </root>
+
+    and (use_attr=1):
+
+        hash2xml
+            {
+                node1 => 'value1',
+                node2 => [ 'value21', { node22 => 'value22' } ],
+                node3 => \'value3',
+                node4 => sub { return 'value4' },
+                node5 => sub { return { node51 => 'value51' } },
+            },
+            use_attr  => 1,
+            canonical => 1,
+            indent    => 2,
+        ;
+
+    will convert to:
+
+        <?xml version="1.0" encoding="utf-8"?>
+        <root node1="value1" node3="value3" node4="value4">
+          <node2>value21</node2>
+          <node2 node22="value22"/>
+          <node5 node51="value51"/>
         </root>
 
 OPTIONS
@@ -55,8 +78,9 @@ OPTIONS
         XML output encoding
 
     indent [ = 0 ]
-        if idnent is "1", XML output should be indented according to its
-        hierarchic structure.
+        if indent great than "0", XML output should be indented according to
+        its hierarchic structure. This value determines the number of
+        spaces.
 
         if indent is "0", XML output will all be on one line.
 
@@ -67,6 +91,16 @@ OPTIONS
 
         if output is FH, XML document writes directly to a filehandle or a
         stream.
+
+    canonical [ = 0 ]
+        if canonical is "1", converter will be write hashes sorted by key.
+
+        if canonical is "0", order of the element will be pseudo-randomly.
+
+    use_attr [ = 0 ]
+        if use_attr is "1", converter will be use the attributes.
+
+        if use_attr is "0", converter will be use tags only.
 
 AUTHOR
         Yuriy Ustushenko, <<yoreek@yahoo.com>>
