--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for XML::Hash::XS.
 
+0.07    2012-04-07
+        Fix memory leak.
+
 0.06    2012-04-06
         New options "canonical" and "use_attr".
 
