--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for XML::Hash::XS.
 
+0.08    2012-04-10
+        Fix for perl < 5.10.
+
 0.07    2012-04-07
         Fix memory leak.
 
