Import of YOREEK/XML-Hash-XS-0.09 from CPAN.
gitpan-cpan-distribution: XML-Hash-XS
gitpan-cpan-version:      0.09
gitpan-cpan-path:         YOREEK/XML-Hash-XS-0.09.tar.gz
gitpan-cpan-author:       YOREEK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for XML::Hash::XS.
 
+0.09    2012-04-12
+        New option "content".
+
 0.08    2012-04-10
         Fix for perl < 5.10.
 
