Import of YOREEK/XML-Hash-XS-0.10 from CPAN.
gitpan-cpan-distribution: XML-Hash-XS
gitpan-cpan-version:      0.10
gitpan-cpan-path:         YOREEK/XML-Hash-XS-0.10.tar.gz
gitpan-cpan-author:       YOREEK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for XML::Hash::XS.
 
+0.10    2012-04-19
+        New option "xml_decl".
+
 0.09    2012-04-12
         New option "content".
 
