--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for XML::Hash::XS.
 
+0.11	2013-03-02
+		Fix for compatibility with version 2.9.0 library libxml2
+
 0.10    2012-04-19
         New option "xml_decl".
 
