Import of YOREEK/XML-Hash-XS-0.12 from CPAN.
gitpan-cpan-distribution: XML-Hash-XS
gitpan-cpan-version:      0.12
gitpan-cpan-path:         YOREEK/XML-Hash-XS-0.12.tar.gz
gitpan-cpan-author:       YOREEK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,7 +1,10 @@
 Revision history for XML::Hash::XS.
 
-0.11	2013-03-02
-		Fix for compatibility with version 2.9.0 library libxml2
+0.12    2013-03-06
+        Experimental support the conversion method of the XML::Hash::LX library.
+
+0.11    2013-03-02
+        Fix for compatibility with version 2.9.0 library libxml2
 
 0.10    2012-04-19
         New option "xml_decl".
