--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for XML::Hash::XS.
 
+0.12_01 2013-03-07
+        Added benchmark results.
+
 0.12    2013-03-06
         Experimental support the conversion method of the XML::Hash::LX library.
 
