--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for XML::Hash::XS.
 
+0.13    2013-03-09
+        Implemented OO interface.
+
 0.12_01 2013-03-07
         Added benchmark results.
 
