--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for XML::Hash::XS.
 
+0.14    2013-03-13
+        Fixed bug allocation encoding handler
+
 0.13    2013-03-09
         Implemented OO interface.
 
