Import of YOREEK/XML-Hash-XS-0.15 from CPAN.
gitpan-cpan-distribution: XML-Hash-XS
gitpan-cpan-version:      0.15
gitpan-cpan-path:         YOREEK/XML-Hash-XS-0.15.tar.gz
gitpan-cpan-author:       YOREEK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for XML::Hash::XS.
 
+0.15    2013-03-17
+        Using Iconv and ICU libs directly.
+
 0.14    2013-03-13
         Fixed bug allocation encoding handler
 
