Import of YOREEK/XML-Hash-XS-0.16 from CPAN.
gitpan-cpan-distribution: XML-Hash-XS
gitpan-cpan-version:      0.16
gitpan-cpan-path:         YOREEK/XML-Hash-XS-0.16.tar.gz
gitpan-cpan-author:       YOREEK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for XML::Hash::XS.
 
+0.16    2013-03-19
+        New option "doc".
+
 0.15    2013-03-17
         Using Iconv and ICU libs directly.
 
