Import of YOREEK/XML-Hash-XS-0.18 from CPAN.
gitpan-cpan-distribution: XML-Hash-XS
gitpan-cpan-version:      0.18
gitpan-cpan-path:         YOREEK/XML-Hash-XS-0.18.tar.gz
gitpan-cpan-author:       YOREEK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for XML::Hash::XS.
 
+0.18    2013-04-14
+        Fixbug: segmentation fault.
+        Fixbug: skip test if encoding is not supported.
+
 0.17    2013-03-22
         Fixed bug with invalid stack pointer.
 
