Import of YOREEK/XML-Hash-XS-0.21 from CPAN.
gitpan-cpan-distribution: XML-Hash-XS
gitpan-cpan-version:      0.21
gitpan-cpan-path:         YOREEK/XML-Hash-XS-0.21.tar.gz
gitpan-cpan-author:       YOREEK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for XML::Hash::XS.
 
+0.21	2013-07-16
+		Fixbug: #include error
+
 0.20    2013-07-14
         Fixbug: conv_writer_t has no member named encoder
         Fixbug: test 02-conv-lx.t
